[gd_scene load_steps=8 format=3 uid="uid://c2anc80ofybrx"]

[ext_resource type="Script" path="res://Card/CardTest.gd" id="1_tfun0"]
[ext_resource type="Texture2D" uid="uid://sub47hlkbh5s" path="res://Card/Resource/tilemap_packed.png" id="2_pje6i"]
[ext_resource type="Texture2D" uid="uid://bqq55y6hkuqri" path="res://Card/Resource/Hero.png" id="3_6htbi"]
[ext_resource type="Texture2D" uid="uid://i0t4mwj1440a" path="res://Card/Resource/enemies.png" id="4_c0v7a"]
[ext_resource type="Texture2D" uid="uid://cxja1md3oyuct" path="res://Card/Resource/cardBack.png" id="5_jeo0k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_re41x"]
texture = ExtResource("2_pje6i")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_axeaj"]
sources/0 = SubResource("TileSetAtlasSource_re41x")

[node name="CardTest" type="Node2D"]
script = ExtResource("1_tfun0")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_axeaj")
format = 2
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(196615, 131072, 1, 196616, 131072, 1, 196617, 131072, 1, 196618, 131072, 1, 196619, 131072, 1, 196620, 131072, 1, 196621, 131072, 1, 196622, 131072, 1, 196623, 131072, 1, 196624, 131072, 1, 196625, 131072, 1, 196626, 131072, 1, 196627, 131072, 1, 196628, 131072, 1, 196629, 131072, 1, 196630, 131072, 1, 196631, 131072, 1, 196632, 131072, 1, 196633, 131072, 1, 196634, 131072, 1, 196635, 131072, 1, 196636, 131072, 1, 196637, 131072, 1, 196638, 131072, 1, 196639, 131072, 1, 196640, 131072, 1, 196641, 131072, 1, 196642, 131072, 1, 196643, 131072, 1, 196644, 131072, 1, 196645, 131072, 1, 196646, 131072, 1, 196647, 131072, 1, 196648, 131072, 1, 262151, 131072, 4, 262152, 131072, 4, 262153, 131072, 4, 262154, 131072, 4, 262155, 131072, 4, 262156, 131072, 4, 262157, 131072, 4, 262158, 131072, 4, 262159, 131072, 4, 262160, 131072, 4, 262161, 131072, 4, 262162, 131072, 4, 262163, 131072, 4, 262164, 131072, 4, 262165, 131072, 4, 262166, 131072, 4, 262167, 131072, 4, 262168, 131072, 4, 262169, 131072, 4, 262170, 131072, 4, 262171, 131072, 4, 262172, 131072, 4, 262173, 131072, 4, 262174, 131072, 4, 262175, 131072, 4, 262176, 131072, 4, 262177, 131072, 4, 262178, 131072, 4, 262179, 131072, 4, 262180, 131072, 4, 262181, 131072, 4, 262182, 131072, 4, 262183, 131072, 4, 262184, 131072, 4, 327687, 0, 4, 327688, 0, 4, 327689, 0, 4, 327690, 0, 4, 327691, 0, 4, 327692, 0, 4, 327693, 0, 4, 327694, 0, 4, 327695, 0, 4, 327696, 0, 4, 327697, 0, 4, 327698, 0, 4, 327699, 0, 4, 327700, 0, 4, 327701, 0, 4, 327702, 0, 4, 327703, 0, 4, 327704, 0, 4, 327705, 0, 4, 327706, 0, 4, 327707, 0, 4, 327708, 0, 4, 327709, 0, 4, 327710, 0, 4, 327711, 0, 4, 327712, 0, 4, 327713, 0, 4, 327714, 0, 4, 327715, 0, 4, 327716, 0, 4, 327717, 0, 4, 327718, 0, 4, 327719, 0, 4, 327720, 0, 4, 393223, 0, 4, 393224, 0, 4, 393225, 0, 4, 393226, 0, 4, 393227, 0, 4, 393228, 0, 4, 393229, 0, 4, 393230, 0, 4, 393231, 0, 4, 393232, 0, 4, 393233, 0, 4, 393234, 0, 4, 393235, 0, 4, 393236, 0, 4, 393237, 0, 4, 393238, 0, 4, 393239, 0, 4, 393240, 0, 4, 393241, 0, 4, 393242, 0, 4, 393243, 0, 4, 393244, 0, 4, 393245, 0, 4, 393246, 0, 4, 393247, 0, 4, 393248, 0, 4, 393249, 0, 4, 393250, 0, 4, 393251, 0, 4, 393252, 0, 4, 393253, 0, 4, 393254, 0, 4, 393255, 0, 4, 393256, 0, 4, 458759, 0, 4, 524295, 0, 4, 589831, 0, 4, 655367, 0, 4, 720903, 0, 4, 786439, 0, 4, 851975, 0, 4, 917511, 0, 4, 458760, 0, 4, 524296, 0, 4, 589832, 0, 4, 655368, 0, 4, 720904, 0, 4, 786440, 0, 4, 851976, 0, 4, 917512, 0, 4, 458761, 0, 4, 524297, 0, 4, 589833, 0, 4, 655369, 0, 4, 720905, 0, 4, 786441, 0, 4, 851977, 0, 4, 917513, 0, 4, 458762, 0, 4, 524298, 0, 4, 589834, 0, 4, 655370, 0, 4, 720906, 0, 4, 786442, 0, 4, 851978, 0, 4, 917514, 0, 4, 458763, 0, 4, 524299, 0, 4, 589835, 0, 4, 655371, 0, 4, 720907, 0, 4, 786443, 0, 4, 851979, 0, 4, 917515, 0, 4, 458764, 0, 4, 524300, 0, 4, 589836, 0, 4, 655372, 0, 4, 720908, 0, 4, 786444, 0, 4, 851980, 0, 4, 917516, 0, 4, 458765, 0, 4, 524301, 0, 4, 589837, 0, 4, 655373, 0, 4, 720909, 0, 4, 786445, 0, 4, 851981, 0, 4, 917517, 0, 4, 458766, 0, 4, 524302, 0, 4, 589838, 0, 4, 655374, 0, 4, 720910, 0, 4, 786446, 0, 4, 851982, 0, 4, 917518, 0, 4, 458767, 0, 4, 524303, 0, 4, 589839, 0, 4, 655375, 0, 4, 720911, 0, 4, 786447, 0, 4, 851983, 0, 4, 917519, 0, 4, 458768, 0, 4, 524304, 0, 4, 589840, 0, 4, 655376, 0, 4, 720912, 0, 4, 786448, 0, 4, 851984, 0, 4, 917520, 0, 4, 458769, 0, 4, 524305, 0, 4, 589841, 0, 4, 655377, 0, 4, 720913, 0, 4, 786449, 0, 4, 851985, 0, 4, 917521, 0, 4, 458770, 0, 4, 524306, 0, 4, 589842, 0, 4, 655378, 0, 4, 720914, 0, 4, 786450, 0, 4, 851986, 0, 4, 917522, 0, 4, 458771, 0, 4, 524307, 0, 4, 589843, 0, 4, 655379, 0, 4, 720915, 0, 4, 786451, 0, 4, 851987, 0, 4, 917523, 0, 4, 458772, 0, 4, 524308, 0, 4, 589844, 0, 4, 655380, 0, 4, 720916, 0, 4, 786452, 0, 4, 851988, 0, 4, 917524, 0, 4, 458773, 0, 4, 524309, 0, 4, 589845, 0, 4, 655381, 0, 4, 720917, 0, 4, 786453, 0, 4, 851989, 0, 4, 917525, 0, 4, 458774, 0, 4, 524310, 0, 4, 589846, 0, 4, 655382, 0, 4, 720918, 0, 4, 786454, 0, 4, 851990, 0, 4, 917526, 0, 4, 458775, 0, 4, 524311, 0, 4, 589847, 0, 4, 655383, 0, 4, 720919, 0, 4, 786455, 0, 4, 851991, 0, 4, 917527, 0, 4, 458776, 0, 4, 524312, 0, 4, 589848, 0, 4, 655384, 0, 4, 720920, 0, 4, 786456, 0, 4, 851992, 0, 4, 917528, 0, 4, 458777, 0, 4, 524313, 0, 4, 589849, 0, 4, 655385, 0, 4, 720921, 0, 4, 786457, 0, 4, 851993, 0, 4, 917529, 0, 4, 458778, 0, 4, 524314, 0, 4, 589850, 0, 4, 655386, 0, 4, 720922, 0, 4, 786458, 0, 4, 851994, 0, 4, 917530, 0, 4, 458779, 0, 4, 524315, 0, 4, 589851, 0, 4, 655387, 0, 4, 720923, 0, 4, 786459, 0, 4, 851995, 0, 4, 917531, 0, 4, 458780, 0, 4, 524316, 0, 4, 589852, 0, 4, 655388, 0, 4, 720924, 0, 4, 786460, 0, 4, 851996, 0, 4, 917532, 0, 4, 458781, 0, 4, 524317, 0, 4, 589853, 0, 4, 655389, 0, 4, 720925, 0, 4, 786461, 0, 4, 851997, 0, 4, 917533, 0, 4, 458782, 0, 4, 524318, 0, 4, 589854, 0, 4, 655390, 0, 4, 720926, 0, 4, 786462, 0, 4, 851998, 0, 4, 917534, 0, 4, 458783, 0, 4, 524319, 0, 4, 589855, 0, 4, 655391, 0, 4, 720927, 0, 4, 786463, 0, 4, 851999, 0, 4, 917535, 0, 4, 458784, 0, 4, 524320, 0, 4, 589856, 0, 4, 655392, 0, 4, 720928, 0, 4, 786464, 0, 4, 852000, 0, 4, 917536, 0, 4, 458785, 0, 4, 524321, 0, 4, 589857, 0, 4, 655393, 0, 4, 720929, 0, 4, 786465, 0, 4, 852001, 0, 4, 917537, 0, 4, 458786, 0, 4, 524322, 0, 4, 589858, 0, 4, 655394, 0, 4, 720930, 0, 4, 786466, 0, 4, 852002, 0, 4, 917538, 0, 4, 458787, 0, 4, 524323, 0, 4, 589859, 0, 4, 655395, 0, 4, 720931, 0, 4, 786467, 0, 4, 852003, 0, 4, 917539, 0, 4, 458788, 0, 4, 524324, 0, 4, 589860, 0, 4, 655396, 0, 4, 720932, 0, 4, 786468, 0, 4, 852004, 0, 4, 917540, 0, 4, 458789, 0, 4, 524325, 0, 4, 589861, 0, 4, 655397, 0, 4, 720933, 0, 4, 786469, 0, 4, 852005, 0, 4, 917541, 0, 4, 458790, 0, 4, 524326, 0, 4, 589862, 0, 4, 655398, 0, 4, 720934, 0, 4, 786470, 0, 4, 852006, 0, 4, 917542, 0, 4, 458791, 0, 4, 524327, 0, 4, 589863, 0, 4, 655399, 0, 4, 720935, 0, 4, 786471, 0, 4, 852007, 0, 4, 917543, 0, 4, 458792, 0, 4, 524328, 0, 4, 589864, 0, 4, 655400, 0, 4, 720936, 0, 4, 786472, 0, 4, 852008, 0, 4, 917544, 0, 4, 983047, 0, 4, 983048, 0, 4, 983049, 0, 4, 983050, 0, 4, 983051, 0, 4, 983052, 0, 4, 983053, 0, 4, 983054, 0, 4, 983055, 0, 4, 983056, 0, 4, 983057, 0, 4, 983058, 0, 4, 983059, 0, 4, 983060, 0, 4, 983061, 0, 4, 983062, 0, 4, 983063, 0, 4, 983064, 0, 4, 983065, 0, 4, 983066, 0, 4, 983067, 0, 4, 983068, 0, 4, 983069, 0, 4, 983070, 0, 4, 983071, 0, 4, 983072, 0, 4, 983073, 0, 4, 983074, 0, 4, 983075, 0, 4, 983076, 0, 4, 983077, 0, 4, 983078, 0, 4, 983079, 0, 4, 983080, 0, 4, 196614, 131072, 1, 262150, 131072, 1, 327686, 131072, 1, 393222, 131072, 1, 458758, 131072, 1, 524294, 131072, 1, 589830, 131072, 1, 655366, 131072, 1, 720902, 131072, 1, 786438, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 983046, 131072, 1, 196649, 131072, 1, 262185, 131072, 1, 327721, 131072, 1, 393257, 131072, 1, 458793, 131072, 1, 524329, 131072, 1, 589865, 131072, 1, 655401, 131072, 1, 720937, 131072, 1, 786473, 131072, 1, 852009, 131072, 1, 917545, 131072, 1, 983081, 131072, 1, 1048583, 0, 4, 1048584, 0, 4, 1048585, 0, 4, 1048586, 0, 4, 1048587, 0, 4, 1048588, 0, 4, 1048589, 0, 4, 1048590, 0, 4, 1048591, 0, 4, 1048592, 0, 4, 1048593, 0, 4, 1048594, 0, 4, 1048595, 0, 4, 1048596, 0, 4, 1048597, 0, 4, 1048598, 0, 4, 1048599, 0, 4, 1048600, 0, 4, 1048601, 0, 4, 1048602, 0, 4, 1048603, 0, 4, 1048604, 0, 4, 1048605, 0, 4, 1048606, 0, 4, 1048607, 0, 4, 1048608, 0, 4, 1048609, 0, 4, 1048610, 0, 4, 1048611, 0, 4, 1048612, 0, 4, 1048613, 0, 4, 1048614, 0, 4, 1048615, 0, 4, 1048616, 0, 4, 1114119, 0, 4, 1179655, 0, 4, 1245191, 0, 4, 1310727, 0, 4, 1376263, 0, 4, 1441799, 0, 4, 1507335, 0, 4, 1572871, 0, 4, 1638407, 0, 4, 1703943, 0, 4, 1769479, 0, 4, 1835015, 0, 4, 1900551, 0, 4, 1966087, 0, 4, 2031623, 0, 4, 2097159, 0, 4, 2162695, 0, 4, 1114120, 0, 4, 1179656, 0, 4, 1245192, 0, 4, 1310728, 0, 4, 1376264, 0, 4, 1441800, 0, 4, 1507336, 0, 4, 1572872, 0, 4, 1638408, 0, 4, 1703944, 0, 4, 1769480, 0, 4, 1835016, 0, 4, 1900552, 0, 4, 1966088, 0, 4, 2031624, 0, 4, 2097160, 0, 4, 2162696, 0, 4, 1114121, 0, 4, 1179657, 0, 4, 1245193, 0, 4, 1310729, 0, 4, 1376265, 0, 4, 1441801, 0, 4, 1507337, 0, 4, 1572873, 0, 4, 1638409, 0, 4, 1703945, 0, 4, 1769481, 0, 4, 1835017, 0, 4, 1900553, 0, 4, 1966089, 0, 4, 2031625, 0, 4, 2097161, 0, 4, 2162697, 0, 4, 1114122, 0, 4, 1179658, 0, 4, 1245194, 0, 4, 1310730, 0, 4, 1376266, 0, 4, 1441802, 0, 4, 1507338, 0, 4, 1572874, 0, 4, 1638410, 0, 4, 1703946, 0, 4, 1769482, 0, 4, 1835018, 0, 4, 1900554, 0, 4, 1966090, 0, 4, 2031626, 0, 4, 2097162, 0, 4, 2162698, 0, 4, 1114123, 0, 4, 1179659, 0, 4, 1245195, 0, 4, 1310731, 0, 4, 1376267, 0, 4, 1441803, 0, 4, 1507339, 0, 4, 1572875, 0, 4, 1638411, 0, 4, 1703947, 0, 4, 1769483, 0, 4, 1835019, 0, 4, 1900555, 0, 4, 1966091, 0, 4, 2031627, 0, 4, 2097163, 0, 4, 2162699, 0, 4, 1114124, 0, 4, 1179660, 0, 4, 1245196, 0, 4, 1310732, 0, 4, 1376268, 0, 4, 1441804, 0, 4, 1507340, 0, 4, 1572876, 0, 4, 1638412, 0, 4, 1703948, 0, 4, 1769484, 0, 4, 1835020, 0, 4, 1900556, 0, 4, 1966092, 0, 4, 2031628, 0, 4, 2097164, 0, 4, 2162700, 0, 4, 1114125, 0, 4, 1179661, 0, 4, 1245197, 0, 4, 1310733, 0, 4, 1376269, 0, 4, 1441805, 0, 4, 1507341, 0, 4, 1572877, 0, 4, 1638413, 0, 4, 1703949, 0, 4, 1769485, 0, 4, 1835021, 0, 4, 1900557, 0, 4, 1966093, 0, 4, 2031629, 0, 4, 2097165, 0, 4, 2162701, 0, 4, 1114126, 0, 4, 1179662, 0, 4, 1245198, 0, 4, 1310734, 0, 4, 1376270, 0, 4, 1441806, 0, 4, 1507342, 0, 4, 1572878, 0, 4, 1638414, 0, 4, 1703950, 0, 4, 1769486, 0, 4, 1835022, 0, 4, 1900558, 0, 4, 1966094, 0, 4, 2031630, 0, 4, 2097166, 0, 4, 2162702, 0, 4, 1114127, 0, 4, 1179663, 0, 4, 1245199, 0, 4, 1310735, 0, 4, 1376271, 0, 4, 1441807, 0, 4, 1507343, 0, 4, 1572879, 0, 4, 1638415, 0, 4, 1703951, 0, 4, 1769487, 0, 4, 1835023, 0, 4, 1900559, 0, 4, 1966095, 0, 4, 2031631, 0, 4, 2097167, 0, 4, 2162703, 0, 4, 1114128, 0, 4, 1179664, 0, 4, 1245200, 0, 4, 1310736, 0, 4, 1376272, 0, 4, 1441808, 0, 4, 1507344, 0, 4, 1572880, 0, 4, 1638416, 0, 4, 1703952, 0, 4, 1769488, 0, 4, 1835024, 0, 4, 1900560, 0, 4, 1966096, 0, 4, 2031632, 0, 4, 2097168, 0, 4, 2162704, 0, 4, 1114129, 0, 4, 1179665, 0, 4, 1245201, 0, 4, 1310737, 0, 4, 1376273, 0, 4, 1441809, 0, 4, 1507345, 0, 4, 1572881, 0, 4, 1638417, 0, 4, 1703953, 0, 4, 1769489, 0, 4, 1835025, 0, 4, 1900561, 0, 4, 1966097, 0, 4, 2031633, 0, 4, 2097169, 0, 4, 2162705, 0, 4, 1114130, 0, 4, 1179666, 0, 4, 1245202, 0, 4, 1310738, 0, 4, 1376274, 0, 4, 1441810, 0, 4, 1507346, 0, 4, 1572882, 0, 4, 1638418, 0, 4, 1703954, 0, 4, 1769490, 0, 4, 1835026, 0, 4, 1900562, 0, 4, 1966098, 0, 4, 2031634, 0, 4, 2097170, 0, 4, 2162706, 0, 4, 1114131, 0, 4, 1179667, 0, 4, 1245203, 0, 4, 1310739, 0, 4, 1376275, 0, 4, 1441811, 0, 4, 1507347, 0, 4, 1572883, 0, 4, 1638419, 0, 4, 1703955, 0, 4, 1769491, 0, 4, 1835027, 0, 4, 1900563, 0, 4, 1966099, 0, 4, 2031635, 0, 4, 2097171, 0, 4, 2162707, 0, 4, 1114132, 0, 4, 1179668, 0, 4, 1245204, 0, 4, 1310740, 0, 4, 1376276, 0, 4, 1441812, 0, 4, 1507348, 0, 4, 1572884, 0, 4, 1638420, 0, 4, 1703956, 0, 4, 1769492, 0, 4, 1835028, 0, 4, 1900564, 0, 4, 1966100, 0, 4, 2031636, 0, 4, 2097172, 0, 4, 2162708, 0, 4, 1114133, 0, 4, 1179669, 0, 4, 1245205, 0, 4, 1310741, 0, 4, 1376277, 0, 4, 1441813, 0, 4, 1507349, 0, 4, 1572885, 0, 4, 1638421, 0, 4, 1703957, 0, 4, 1769493, 0, 4, 1835029, 0, 4, 1900565, 0, 4, 1966101, 0, 4, 2031637, 0, 4, 2097173, 0, 4, 2162709, 0, 4, 1114134, 0, 4, 1179670, 0, 4, 1245206, 0, 4, 1310742, 0, 4, 1376278, 0, 4, 1441814, 0, 4, 1507350, 0, 4, 1572886, 0, 4, 1638422, 0, 4, 1703958, 0, 4, 1769494, 0, 4, 1835030, 0, 4, 1900566, 0, 4, 1966102, 0, 4, 2031638, 0, 4, 2097174, 0, 4, 2162710, 0, 4, 1114135, 0, 4, 1179671, 0, 4, 1245207, 0, 4, 1310743, 0, 4, 1376279, 0, 4, 1441815, 0, 4, 1507351, 0, 4, 1572887, 0, 4, 1638423, 0, 4, 1703959, 0, 4, 1769495, 0, 4, 1835031, 0, 4, 1900567, 0, 4, 1966103, 0, 4, 2031639, 0, 4, 2097175, 0, 4, 2162711, 0, 4, 1114136, 0, 4, 1179672, 0, 4, 1245208, 0, 4, 1310744, 0, 4, 1376280, 0, 4, 1441816, 0, 4, 1507352, 0, 4, 1572888, 0, 4, 1638424, 0, 4, 1703960, 0, 4, 1769496, 0, 4, 1835032, 0, 4, 1900568, 0, 4, 1966104, 0, 4, 2031640, 0, 4, 2097176, 0, 4, 2162712, 0, 4, 1114137, 0, 4, 1179673, 0, 4, 1245209, 0, 4, 1310745, 0, 4, 1376281, 0, 4, 1441817, 0, 4, 1507353, 0, 4, 1572889, 0, 4, 1638425, 0, 4, 1703961, 0, 4, 1769497, 0, 4, 1835033, 0, 4, 1900569, 0, 4, 1966105, 0, 4, 2031641, 0, 4, 2097177, 0, 4, 2162713, 0, 4, 1114138, 0, 4, 1179674, 0, 4, 1245210, 0, 4, 1310746, 0, 4, 1376282, 0, 4, 1441818, 0, 4, 1507354, 0, 4, 1572890, 0, 4, 1638426, 0, 4, 1703962, 0, 4, 1769498, 0, 4, 1835034, 0, 4, 1900570, 0, 4, 1966106, 0, 4, 2031642, 0, 4, 2097178, 0, 4, 2162714, 0, 4, 1114139, 0, 4, 1179675, 0, 4, 1245211, 0, 4, 1310747, 0, 4, 1376283, 0, 4, 1441819, 0, 4, 1507355, 0, 4, 1572891, 0, 4, 1638427, 0, 4, 1703963, 0, 4, 1769499, 0, 4, 1835035, 0, 4, 1900571, 0, 4, 1966107, 0, 4, 2031643, 0, 4, 2097179, 0, 4, 2162715, 0, 4, 1114140, 0, 4, 1179676, 0, 4, 1245212, 0, 4, 1310748, 0, 4, 1376284, 0, 4, 1441820, 0, 4, 1507356, 0, 4, 1572892, 0, 4, 1638428, 0, 4, 1703964, 0, 4, 1769500, 0, 4, 1835036, 0, 4, 1900572, 0, 4, 1966108, 0, 4, 2031644, 0, 4, 2097180, 0, 4, 2162716, 0, 4, 1114141, 0, 4, 1179677, 0, 4, 1245213, 0, 4, 1310749, 0, 4, 1376285, 0, 4, 1441821, 0, 4, 1507357, 0, 4, 1572893, 0, 4, 1638429, 0, 4, 1703965, 0, 4, 1769501, 0, 4, 1835037, 0, 4, 1900573, 0, 4, 1966109, 0, 4, 2031645, 0, 4, 2097181, 0, 4, 2162717, 0, 4, 1114142, 0, 4, 1179678, 0, 4, 1245214, 0, 4, 1310750, 0, 4, 1376286, 0, 4, 1441822, 0, 4, 1507358, 0, 4, 1572894, 0, 4, 1638430, 0, 4, 1703966, 0, 4, 1769502, 0, 4, 1835038, 0, 4, 1900574, 0, 4, 1966110, 0, 4, 2031646, 0, 4, 2097182, 0, 4, 2162718, 0, 4, 1114143, 0, 4, 1179679, 0, 4, 1245215, 0, 4, 1310751, 0, 4, 1376287, 0, 4, 1441823, 0, 4, 1507359, 0, 4, 1572895, 0, 4, 1638431, 0, 4, 1703967, 0, 4, 1769503, 0, 4, 1835039, 0, 4, 1900575, 0, 4, 1966111, 0, 4, 2031647, 0, 4, 2097183, 0, 4, 2162719, 0, 4, 1114144, 0, 4, 1179680, 0, 4, 1245216, 0, 4, 1310752, 0, 4, 1376288, 0, 4, 1441824, 0, 4, 1507360, 0, 4, 1572896, 0, 4, 1638432, 0, 4, 1703968, 0, 4, 1769504, 0, 4, 1835040, 0, 4, 1900576, 0, 4, 1966112, 0, 4, 2031648, 0, 4, 2097184, 0, 4, 2162720, 0, 4, 1114145, 0, 4, 1179681, 0, 4, 1245217, 0, 4, 1310753, 0, 4, 1376289, 0, 4, 1441825, 0, 4, 1507361, 0, 4, 1572897, 0, 4, 1638433, 0, 4, 1703969, 0, 4, 1769505, 0, 4, 1835041, 0, 4, 1900577, 0, 4, 1966113, 0, 4, 2031649, 0, 4, 2097185, 0, 4, 2162721, 0, 4, 1114146, 0, 4, 1179682, 0, 4, 1245218, 0, 4, 1310754, 0, 4, 1376290, 0, 4, 1441826, 0, 4, 1507362, 0, 4, 1572898, 0, 4, 1638434, 0, 4, 1703970, 0, 4, 1769506, 0, 4, 1835042, 0, 4, 1900578, 0, 4, 1966114, 0, 4, 2031650, 0, 4, 2097186, 0, 4, 2162722, 0, 4, 1114147, 0, 4, 1179683, 0, 4, 1245219, 0, 4, 1310755, 0, 4, 1376291, 0, 4, 1441827, 0, 4, 1507363, 0, 4, 1572899, 0, 4, 1638435, 0, 4, 1703971, 0, 4, 1769507, 0, 4, 1835043, 0, 4, 1900579, 0, 4, 1966115, 0, 4, 2031651, 0, 4, 2097187, 0, 4, 2162723, 0, 4, 1114148, 0, 4, 1179684, 0, 4, 1245220, 0, 4, 1310756, 0, 4, 1376292, 0, 4, 1441828, 0, 4, 1507364, 0, 4, 1572900, 0, 4, 1638436, 0, 4, 1703972, 0, 4, 1769508, 0, 4, 1835044, 0, 4, 1900580, 0, 4, 1966116, 0, 4, 2031652, 0, 4, 2097188, 0, 4, 2162724, 0, 4, 1114149, 0, 4, 1179685, 0, 4, 1245221, 0, 4, 1310757, 0, 4, 1376293, 0, 4, 1441829, 0, 4, 1507365, 0, 4, 1572901, 0, 4, 1638437, 0, 4, 1703973, 0, 4, 1769509, 0, 4, 1835045, 0, 4, 1900581, 0, 4, 1966117, 0, 4, 2031653, 0, 4, 2097189, 0, 4, 2162725, 0, 4, 1114150, 0, 4, 1179686, 0, 4, 1245222, 0, 4, 1310758, 0, 4, 1376294, 0, 4, 1441830, 0, 4, 1507366, 0, 4, 1572902, 0, 4, 1638438, 0, 4, 1703974, 0, 4, 1769510, 0, 4, 1835046, 0, 4, 1900582, 0, 4, 1966118, 0, 4, 2031654, 0, 4, 2097190, 0, 4, 2162726, 0, 4, 1114151, 0, 4, 1179687, 0, 4, 1245223, 0, 4, 1310759, 0, 4, 1376295, 0, 4, 1441831, 0, 4, 1507367, 0, 4, 1572903, 0, 4, 1638439, 0, 4, 1703975, 0, 4, 1769511, 0, 4, 1835047, 0, 4, 1900583, 0, 4, 1966119, 0, 4, 2031655, 0, 4, 2097191, 0, 4, 2162727, 0, 4, 1114152, 0, 4, 1179688, 0, 4, 1245224, 0, 4, 1310760, 0, 4, 1376296, 0, 4, 1441832, 0, 4, 1507368, 0, 4, 1572904, 0, 4, 1638440, 0, 4, 1703976, 0, 4, 1769512, 0, 4, 1835048, 0, 4, 1900584, 0, 4, 1966120, 0, 4, 2031656, 0, 4, 2097192, 0, 4, 2162728, 0, 4, 1048582, 131072, 1, 1114118, 131072, 1, 1179654, 131072, 1, 1245190, 131072, 1, 1310726, 131072, 1, 1376262, 131072, 1, 1441798, 131072, 1, 1507334, 131072, 1, 1572870, 131072, 1, 1638406, 131072, 1, 1703942, 131072, 1, 1769478, 131072, 1, 1835014, 131072, 1, 1900550, 131072, 1, 1966086, 131072, 1, 2031622, 131072, 1, 2097158, 131072, 1, 2162694, 131072, 1, 2228230, 131072, 1, 2228231, 131072, 1, 2228232, 131072, 1, 2228233, 131072, 1, 2228234, 131072, 1, 2228235, 131072, 1, 2228236, 131072, 1, 2228237, 131072, 1, 2228238, 131072, 1, 2228239, 131072, 1, 2228240, 131072, 1, 2228241, 131072, 1, 2228242, 131072, 1, 2228243, 131072, 1, 2228244, 131072, 1, 2228245, 131072, 1, 2228246, 131072, 1, 2228247, 131072, 1, 2228248, 131072, 1, 2228249, 131072, 1, 2228250, 131072, 1, 2228251, 131072, 1, 2228252, 131072, 1, 2228253, 131072, 1, 2228254, 131072, 1, 2228255, 131072, 1, 2228256, 131072, 1, 2228257, 131072, 1, 2228258, 131072, 1, 2228259, 131072, 1, 2228260, 131072, 1, 2228261, 131072, 1, 2228262, 131072, 1, 2228263, 131072, 1, 2228264, 131072, 1, 2228265, 131072, 1, 1048617, 131072, 1, 1114153, 131072, 1, 1179689, 131072, 1, 1245225, 131072, 1, 1310761, 131072, 1, 1376297, 131072, 1, 1441833, 131072, 1, 1507369, 131072, 1, 1572905, 131072, 1, 1638441, 131072, 1, 1703977, 131072, 1, 1769513, 131072, 1, 1835049, 131072, 1, 1900585, 131072, 1, 1966121, 131072, 1, 2031657, 131072, 1, 2097193, 131072, 1, 2162729, 131072, 1)

[node name="Player" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(226, 342)
scale = Vector2(0.580395, 0.505681)
texture = ExtResource("3_6htbi")
region_enabled = true
region_rect = Rect2(201.168, 29.232, 117, 132)

[node name="Buttons" type="Node2D" parent="Player"]

[node name="ChooseButton" type="Button" parent="Player/Buttons"]
offset_left = 194.0
offset_top = 379.0
offset_right = 262.0
offset_bottom = 409.0
theme_override_font_sizes/font_size = 15
text = "행동선택"

[node name="DrawButton" type="Button" parent="Player/Buttons"]
visible = false
offset_left = 269.0
offset_top = 311.0
offset_right = 307.0
offset_bottom = 333.0
theme_override_font_sizes/font_size = 10
text = "드로우"

[node name="ChangeButton" type="Button" parent="Player/Buttons"]
visible = false
offset_left = 270.0
offset_top = 336.0
offset_right = 308.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 10
text = "교체"

[node name="MoveButton" type="Button" parent="Player/Buttons"]
visible = false
offset_left = 270.0
offset_top = 361.0
offset_right = 308.0
offset_bottom = 383.0
theme_override_font_sizes/font_size = 10
text = "이동"

[node name="AttackButton" type="Button" parent="Player/Buttons"]
visible = false
offset_left = 270.0
offset_top = 386.0
offset_right = 308.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 10
text = "공격"

[node name="PlayerHP" type="ProgressBar" parent="Player"]
offset_left = 94.0
offset_top = 10.0
offset_right = 205.0
offset_bottom = 37.0
show_percentage = false

[node name="PLabel" type="Label" parent="Player/PlayerHP"]
layout_mode = 0
offset_left = 32.0
offset_right = 81.0
offset_bottom = 26.0
text = "HP: 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PShield" type="Label" parent="Player"]
offset_left = 239.0
offset_top = 10.0
offset_right = 328.0
offset_bottom = 36.0
text = "Shield: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
position = Vector2(470, 355)
scale = Vector2(0.945651, 0.761264)
texture = ExtResource("4_c0v7a")
region_enabled = true
region_rect = Rect2(46, 27, 92, 111)

[node name="EnemyHP" type="ProgressBar" parent="Enemy"]
offset_left = 402.0
offset_top = 273.0
offset_right = 524.0
offset_bottom = 300.0
max_value = 1000.0
show_percentage = false

[node name="ELabel" type="Label" parent="Enemy/EnemyHP"]
layout_mode = 0
offset_left = 29.0
offset_right = 96.0
offset_bottom = 26.0
text = "HP: 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Card" type="Node2D" parent="."]

[node name="Button1" type="Button" parent="Card"]
offset_left = 130.0
offset_top = 250.0
offset_right = 220.0
offset_bottom = 413.0
scale = Vector2(0.35, 0.3)
theme_override_colors/icon_hover_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_jeo0k")

[node name="Button2" type="Button" parent="Card"]
offset_left = 180.0
offset_top = 250.0
offset_right = 270.0
offset_bottom = 413.0
scale = Vector2(0.35, 0.3)
theme_override_colors/icon_hover_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_jeo0k")

[node name="Button3" type="Button" parent="Card"]
offset_left = 230.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 413.0
scale = Vector2(0.35, 0.3)
theme_override_colors/icon_hover_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_jeo0k")

[node name="Button4" type="Button" parent="Card"]
offset_left = 280.0
offset_top = 250.0
offset_right = 370.0
offset_bottom = 413.0
scale = Vector2(0.35, 0.3)
theme_override_colors/icon_hover_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_jeo0k")

[node name="Button5" type="Button" parent="Card"]
offset_left = 330.0
offset_top = 250.0
offset_right = 420.0
offset_bottom = 413.0
scale = Vector2(0.35, 0.3)
theme_override_colors/icon_hover_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_jeo0k")
